--- a/backend/.env
+++ b/backend/.env
@@ -1,8 +1,8 @@
-MONGODB_URI=mongodb+srv://fashion:Fashion%40123@fashiondb.e01wwmx.mongodb.net/ETRO?retryWrites=true&w=majority&appName=fashionDb
+MONGODB_URI=
 JWT_SECRET=your_jwt_secret_key_change_this
 
-RAZORPAY_KEY_ID=rzp_test_RaTgF5QZ5ekVl7
-RAZORPAY_KEY_SECRET=vkztfHuHSsZq8eWwX0hK6Y4e
+RAZORPAY_KEY_ID=
+RAZORPAY_KEY_SECRET=
 
 FRONTEND_URL=http://localhost:5173
 PORT=5001
