--- a/backend/.env
+++ b/backend/.env
@@ -1,9 +1,15 @@
 MONGODB_URI=mongodb+srv://fashion:Fashion%40123@fashiondb.e01wwmx.mongodb.net/ETRO?retryWrites=true&w=majority&appName=fashionDb
 JWT_SECRET=your_jwt_secret_key_change_this
 
-RAZORPAY_KEY_ID=rzp_test_RaTgF5QZ5ekVl7
-RAZORPAY_KEY_SECRET=vkztfHuHSsZq8eWwX0hK6Y4e
+# RAZORPAY_KEY_ID=rzp_test_RaTgF5QZ5ekVl7
+# RAZORPAY_KEY_SECRET=vkztfHuHSsZq8eWwX0hK6Y4e
 
 FRONTEND_URL=http://localhost:5173
 PORT=5001
 NODE_ENV=development
+
+
+CGPEY_API_KEY=YOUR_API_KEY
+CGPEY_SECRET_KEY=YOUR_SECRET_KEY
+# CGPEY_WHITELISTED_IP=YOUR_PUBLIC_IP
+CGPEY_WHITELISTED_IP=103.147.161.240
