--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,13 +1,7 @@
-
-# Logs
-logs
-*.log
-
-# Node modules
-node_modules/
-
-# Environment files
+# Ignore environment variable files
 .env
 .env.local
 .env.*.local
 
+node_modules
+.env
