--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,17 +1,17 @@
 
-# Logs
-logs
-*.log
+# # Logs
+# logs
+# *.log
 
-# Node modules
-node_modules/
+# # Node modules
+# node_modules/
 
-# Environment files
-.env
-.env.local
-.env.*.local
+# # Environment files
+# .env
+# .env.local
+# .env.*.local
 
 
-node_modules
-.env
+# node_modules
+# .env
 
