--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -3,13 +3,13 @@
 # logs
 # *.log
 
-# # Node modules
+# Node modules
 # node_modules/
 
-# # Environment files
-# .env
-# .env.local
-# .env.*.local
+# Environment files
+.env
+.env.local
+.env.*.local
 
 
 # node_modules
